TODO-999: Sonar resolutions, opt()/isEmpty() migrations, test regression fixes
Resolves SonarQube findings across all modules; migrates Optional.of/ofNullable/empty
to opt()/opte() in 41 files and null-plus-empty checks to isEmpty()/isBlank() in 12 files;
fixes JettyLogger_Test stale assertions and Utils_Test CCE regression.

Co-authored-by: Cursor <cursoragent@cursor.com>